# copier

./: README.md  cwrsync_integration_plan.md  gui_manager.py  main_pyside.py  pyproject.toml  requirements-dev.txt  requirements.txt  rsync_controller.py  rsync_runner.py  state_manager.py
config/: mypy.ini
docs/: code_structure_implementation_plan.md  improvement_plan.md  project_structure.md  rsync_controller_refactor_plan.md  rsync_refactor_implementation_plan.md  settings_implementation_plan.md  structure_refactor_plan.md
src/copier/: config.py  coordinator.py  main.py  state_manager.py
src/copier.egg-info/: PKG-INFO  SOURCES.txt
src/copier/gui/: manager.py  widgets.py
src/copier/rsync/: command.py  controller.py  environment.py  manager.py
