# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copier"
version = "0.1.0"
description = "A PySide GUI application for running rsync."

[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools to look for packages under the 'src' directory